CMFileManager: Use valueOf() instaed of new Integer()
valueOf caches the value instead of instantiating new integers all the time.
This makes creation of integers quicker and more memory friendly.

Change-Id: I6dc3107de7cd9f081306e6a4da4e043eab3d3322